@@ -38,6 +38,7 @@ import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.Nullable;
@@ -63,7 +64,7 @@ public abstract class AbstractRulesModel implements Serializable {
                 .sorted()
                 .distinct()
                 .filter(service -> !"GWC".equalsIgnoreCase(service))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -85,7 +86,7 @@ public abstract class AbstractRulesModel implements Serializable {
                                 .orElseGet(Stream::empty))
                 .sorted()
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Iterator<String> getSubfieldChoices(@Nullable String input) {
@@ -148,7 +149,7 @@ public abstract class AbstractRulesModel implements Serializable {
                                 .filter(PublishedInfo::isAdvertised)
                                 .filter(PublishedInfo::isEnabled)
                                 .limit(MAX_SUGGESTIONS)
-                                .toList()
+                                .collect(Collectors.toList())
                                 .stream();
             }
         } else {
